--- a/regression/Makefile
+++ b/regression/Makefile
@@ -1,4 +1,4 @@
-TESTS=test001 test002 test003
+TESTS=test001 test002 test003 test004 test005 test006 test007 test008 test009
 
 .PHONY: check $(TESTS)
 check: $(TESTS)
