--- a/regression/deep-expressions/Makefile
+++ b/regression/deep-expressions/Makefile
@@ -1,11 +1,11 @@
-TESTS=$(basename $(wildcard generated*.expr))
+TESTS=$(sort $(basename $(wildcard generated*.expr)))
 
 .PHONY: check $(TESTS)
 
 check: $(TESTS)
 
 $(TESTS): %: %.expr
-	RC_RUNTIME=../../runtime ../../src/rc.byte $< && cat $@.input | ./$@ > $@.log && diff $@.log orig/$@.log
+	RC_RUNTIME=../../runtime ../../src/rc.byte -o  $< && cat $@.input | ./$@ > $@.log && diff $@.log orig/$@.log
 	cat $@.input | RC_RUNTIME=../../runtime ../../src/rc.byte -i $< > $@.log && diff $@.log orig/$@.log
 	cat $@.input | RC_RUNTIME=../../runtime ../../src/rc.byte -s $< > $@.log && diff $@.log orig/$@.log
 
