--- a/regression/expressions/Makefile
+++ b/regression/expressions/Makefile
@@ -1,4 +1,4 @@
-TESTS=$(basename $(wildcard generated*.expr))
+TESTS=$(sort $(basename $(wildcard generated*.expr)))
 
 .PHONY: check $(TESTS)
 
@@ -6,7 +6,7 @@ check: $(TESTS)
 
 $(TESTS): %: %.expr
 	RC_RUNTIME=../../runtime ../../src/rc.byte -o $< && cat $@.input | ./$@ > $@.log && diff $@.log orig/$@.log
-	cat $@.input | RC_RUNTIME=../../runtime ../../src/rc.byte    $< > $@.log && diff $@.log orig/$@.log
+	cat $@.input | RC_RUNTIME=../../runtime ../../src/rc.byte -i $< > $@.log && diff $@.log orig/$@.log
 	cat $@.input | RC_RUNTIME=../../runtime ../../src/rc.byte -s $< > $@.log && diff $@.log orig/$@.log
 
 clean:
