--- a/regression/global/Makefile
+++ b/regression/global/Makefile
@@ -7,7 +7,7 @@ check: $(TESTS)
 $(TESTS): %: %.expr
 	cat $@.input | ../../rc.native -i $< > $@.log && diff $@.log orig/$@.log
 	cat $@.input | ../../rc.native -s $< > $@.log && diff $@.log orig/$@.log
-#	RC_RUNTIME=../runtime ../rc.native -o $< && cat $@.input | ./$@ > $@.log && diff $@.log orig/$@.log
+	RC_RUNTIME=../../runtime ../../rc.native -o $< && cat $@.input | ./$@ > $@.log && diff $@.log orig/$@.log
 
 clean:
 	rm -f test*.log *.s *~ $(TESTS)
